--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NOAA15 May 08</title>
   <style>
     body {
@@ -34,12 +34,12 @@
       background-color: white;
       pointer-events: none;
       display: none;
-      box-shadow: 0 0 20px rgba(173, 216, 230, 0.7), 0 0 40px rgba(173, 216, 230, 0.4);
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.4);
     }
 
     .glitch-dot {
       position: absolute;
-      background-color: white;
+      background-color: black;
       width: 1px;
       height: 1px;
       pointer-events: none;
@@ -78,15 +78,13 @@
 </head>
 <body>
 
-  <h1>NOAA19 May 14 Pass</h1>
+  <h1>NOAA15 May 08 Pass</h1>
 
-  <!-- Audio player -->
   <audio id="audio" controls>
     <source src="audio.wav" type="audio/wav">
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Image + scan line + noise -->
   <div id="container">
     <img id="scan-image" src="photo.png" alt="Satellite Pass">
     <div id="scan-line"></div>
@@ -117,7 +115,7 @@
     };
 
     function updateScanLine() {
-      const speed = Math.random() * 0.5 + 0.5; // Slower scan speed
+      const speed = Math.random() * 0.5 + 0.5;
       const height = 2 + Math.random() * 12;
       const jitter = (Math.random() - 0.5) * 2;
 
@@ -156,7 +154,6 @@
       scanY = 0;
       scanLine.style.display = 'block';
       noise.style.display = 'block';
-      // Force reload of the noise background image to prevent caching issues
       const timestamp = new Date().getTime();
       noise.style.backgroundImage = `url('https://via.placeholder.com/200x200?${timestamp}')`;
       requestAnimationFrame(glitchyScan);
@@ -170,7 +167,6 @@
       noise.style.display = 'none';
     });
 
-    // Show JS errors if they happen
     window.onerror = function (msg, src, lineno, colno, errorObj) {
       error.textContent = `⚠️ JS Error: ${msg} (line ${lineno}:${colno})`;
     };
@@ -178,6 +174,3 @@
 
 </body>
 </html>
-
-
-<!-- force rebuild -->
