--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NOAA15 May 08</title>
   <style>
     body {
@@ -30,16 +30,16 @@
       position: absolute;
       left: 0;
       width: 100%;
-      height: 2px;
+      height: 1px; /* made slightly smaller */
       background-color: white;
       pointer-events: none;
       display: none;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.4);
+      box-shadow: 0 0 10px rgba(173, 216, 230, 0.7), 0 0 20px rgba(173, 216, 230, 0.4);
     }
 
     .glitch-dot {
       position: absolute;
-      background-color: black;
+      background-color: white;
       width: 1px;
       height: 1px;
       pointer-events: none;
@@ -116,7 +116,7 @@
 
     function updateScanLine() {
       const speed = Math.random() * 0.5 + 0.5;
-      const height = 2 + Math.random() * 12;
+      const height = 1 + Math.random() * 4; // keeping it thinner overall
       const jitter = (Math.random() - 0.5) * 2;
 
       scanY += speed;
