--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NOAA15 May 08</title>
   <style>
     body {
@@ -30,11 +30,11 @@
       position: absolute;
       left: 0;
       width: 100%;
-      height: 1px;
+      height: 2px;
       background-color: black;
       pointer-events: none;
       display: none;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.7), 0 0 20px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 0 10px rgba(0,0,0,0.8), 0 0 20px rgba(0,0,0,0.4);
     }
 
     .glitch-dot {
@@ -44,6 +44,25 @@
       height: 1px;
       pointer-events: none;
       opacity: 0.9;
+    }
+
+    #noise {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      opacity: 0.08;
+      background: url('https://i.imgur.com/8pQfQ5t.png') repeat;
+      background-size: 200px 200px;
+      display: none;
+      animation: noiseMove 1s linear infinite;
+    }
+
+    @keyframes noiseMove {
+      from { background-position: 0 0; }
+      to { background-position: 50px 50px; }
     }
 
     audio {
@@ -61,14 +80,17 @@
 
   <h1>NOAA15 May 08 Pass</h1>
 
+  <!-- Audio player -->
   <audio id="audio" controls>
     <source src="audio.wav" type="audio/wav">
     Your browser does not support the audio element.
   </audio>
 
+  <!-- Image + scan line + noise -->
   <div id="container">
     <img id="scan-image" src="photo.png" alt="Satellite Pass">
     <div id="scan-line"></div>
+    <div id="noise"></div>
   </div>
 
   <div id="error"></div>
@@ -78,6 +100,7 @@
     const scanLine = document.getElementById('scan-line');
     const image = document.getElementById('scan-image');
     const container = document.getElementById('container');
+    const noise = document.getElementById('noise');
     const error = document.getElementById('error');
 
     let imageHeight = 0;
@@ -86,6 +109,7 @@
     image.onload = () => {
       imageHeight = image.offsetHeight;
       scanLine.style.display = 'block';
+      noise.style.display = 'none';
     };
 
     image.onerror = () => {
@@ -94,7 +118,7 @@
 
     function updateScanLine() {
       const speed = Math.random() * 0.5 + 0.5;
-      const height = 1 + Math.random() * 4;
+      const height = 2 + Math.random() * 12;
       const jitter = (Math.random() - 0.5) * 2;
 
       scanY += speed;
@@ -131,15 +155,16 @@
     audio.addEventListener('play', () => {
       scanY = 0;
       scanLine.style.display = 'block';
+      noise.style.display = 'block';
       requestAnimationFrame(glitchyScan);
     });
 
     audio.addEventListener('pause', () => {
-      // Do nothing
+      noise.style.display = 'none';
     });
 
     audio.addEventListener('ended', () => {
-      // Do nothing
+      noise.style.display = 'none';
     });
 
     window.onerror = function (msg, src, lineno, colno, errorObj) {
