--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background-color: black;
+      background-color: #555; /* dark grey */
       pointer-events: none;
       display: none;
-      box-shadow: 0 0 10px rgba(0,0,0,0.8), 0 0 20px rgba(0,0,0,0.4);
+      box-shadow: 0 0 10px rgba(85,85,85,0.8), 0 0 20px rgba(85,85,85,0.4);
     }
 
     .glitch-dot {
