--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background-color: #555; /* dark grey */
+      background-color: white;
       pointer-events: none;
       display: none;
-      box-shadow: 0 0 10px rgba(85,85,85,0.8), 0 0 20px rgba(85,85,85,0.4);
+      box-shadow: 0 0 10px rgba(255,255,255,0.8), 0 0 20px rgba(255,255,255,0.4);
     }
 
     .glitch-dot {
@@ -174,3 +174,4 @@
 
 </body>
 </html>
+
