--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       font-family: Calibri, sans-serif;
       text-align: center;
       padding-top: 30px;
+      overflow: hidden;
     }
 
     #container {
@@ -53,16 +54,14 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      opacity: 0.08;
-      background: url('https://i.imgur.com/8pQfQ5t.png') repeat;
-      background-size: 200px 200px;
-      display: none;
+      background: repeating-radial-gradient(circle, rgba(255,255,255,0.02) 0px, rgba(0,0,0,0.02) 1px);
+      opacity: 0.2;
       animation: noiseMove 1s linear infinite;
     }
 
     @keyframes noiseMove {
       from { background-position: 0 0; }
-      to { background-position: 50px 50px; }
+      to { background-position: 100px 100px; }
     }
 
     audio {
@@ -80,13 +79,11 @@
 
   <h1>NOAA15 May 08 Pass</h1>
 
-  <!-- Audio player -->
   <audio id="audio" controls>
     <source src="audio.wav" type="audio/wav">
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Image + scan line + noise -->
   <div id="container">
     <img id="scan-image" src="photo.png" alt="Satellite Pass">
     <div id="scan-line"></div>
@@ -109,7 +106,7 @@
     image.onload = () => {
       imageHeight = image.offsetHeight;
       scanLine.style.display = 'block';
-      noise.style.display = 'none';
+      noise.style.display = 'block';
     };
 
     image.onerror = () => {
@@ -174,4 +171,3 @@
 
 </body>
 </html>
-
