--- a/index.html
+++ b/index.html
@@ -47,21 +47,23 @@
       opacity: 0.9;
     }
 
-    #noise {
+    /* CSS-only noise effect */
+    #noise::before {
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
+      background: repeating-linear-gradient(45deg, rgba(255,255,255,0.03) 0px, rgba(0,0,0,0.03) 1px);
+      opacity: 0.1;
+      animation: noiseMove 0.5s linear infinite;
       pointer-events: none;
-      background: repeating-radial-gradient(circle, rgba(255,255,255,0.02) 0px, rgba(0,0,0,0.02) 1px);
-      opacity: 0.2;
-      animation: noiseMove 1s linear infinite;
     }
 
     @keyframes noiseMove {
-      from { background-position: 0 0; }
-      to { background-position: 100px 100px; }
+      from { transform: translate(0, 0); }
+      to { transform: translate(10px, 10px); }
     }
 
     audio {
@@ -97,7 +99,6 @@
     const scanLine = document.getElementById('scan-line');
     const image = document.getElementById('scan-image');
     const container = document.getElementById('container');
-    const noise = document.getElementById('noise');
     const error = document.getElementById('error');
 
     let imageHeight = 0;
@@ -106,7 +107,7 @@
     image.onload = () => {
       imageHeight = image.offsetHeight;
       scanLine.style.display = 'block';
-      noise.style.display = 'block';
+      document.getElementById('noise').style.display = 'block';
     };
 
     image.onerror = () => {
@@ -152,16 +153,16 @@
     audio.addEventListener('play', () => {
       scanY = 0;
       scanLine.style.display = 'block';
-      noise.style.display = 'block';
+      document.getElementById('noise').style.display = 'block';
       requestAnimationFrame(glitchyScan);
     });
 
     audio.addEventListener('pause', () => {
-      noise.style.display = 'none';
+      document.getElementById('noise').style.display = 'none';
     });
 
     audio.addEventListener('ended', () => {
-      noise.style.display = 'none';
+      document.getElementById('noise').style.display = 'none';
     });
 
     window.onerror = function (msg, src, lineno, colno, errorObj) {
