--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       background: url('noise.png') repeat;
       background-size: 200px 200px;
       opacity: 0.1;
-      animation: noiseScroll 3s linear infinite;
+      animation: noiseScroll 10s linear infinite; /* slowed down */
     }
 
     @keyframes noiseScroll {
