--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     .glitch-dot {
       position: absolute;
-      background-color: black;
+      background-color: red;
       width: 1px;
       height: 1px;
       pointer-events: none;
@@ -57,7 +57,7 @@
       background: url('noise.png') repeat;
       background-size: 200px 200px;
       opacity: 0.1;
-      animation: noiseScroll 10s linear infinite; /* slowed down */
+      animation: noiseScroll 10s linear infinite;
     }
 
     @keyframes noiseScroll {
